# rvhs-science-lab-decl

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Main.hs  README.md  RNCryptor.hs  TeXRenderAssets.hs  TestData.hs  cabal.config  deploy-production.sh  deploy-staging.sh  labdecl.cabal  rebuild  rebuild-dev.sh  rebuild-docker-dev.sh  stack.yaml  stackpatch.vim  tex-report.tar
LabDecl/: AcidicModelInstances.hs  AcidicModels.hs  AsyncQueue.hs  AsyncServ.hs  EntityCsv.hs  EntityUploadCsv.hs  ErrMsg.hs  FieldParsers.hs  FormFields.hs  FuzzyCsv.hs  Handlers.hs  Main.hs  ModelNames.hs  Models.hs  PDFServices.hs  PushNotifications.hs  RNCryptor.hs  StudentCSV.hs  SubjectCodes.hs  TeXRenderAssets.hs  Types.hs  Utilities.hs
deploy-production/: Dockerfile-labdecl  nginx.conf
deploy-staging/: Dockerfile-labdecl  Dockerfile-nginx  dhparams.pem  nginx.conf
maildaemon/: app.yaml  mailer.py
pydaemon/: app.py  app.yaml
static/: admin.min.js  app.min.js  appv2.min.js  b64.min.js  bootstrap.min.css  bootstrapt.min.css  react.dev.js
templates/: admin.dev.js  admin.es5.js  admin.js  admin.ls  app.cassius  app.es5.js  app.hamlet  app.head.hamlet  app.js  app.julius  appv2.dev.js  appv2.js  didlogout.hamlet  hover.cassius  report.tex  staticadmin.hamlet
templates/jsx/: admin.js
templates/jsxc/: admin.js
