name:                labdecl
version:             0.1.0.0
license:             AllRightsReserved
license-file:        LICENSE
author:              Qian Zhouyu
maintainer:          qzy@qzy.io
build-type:          Simple
extra-source-files:  tex-report.tar.gz, texlive-2014-portable.tar.xz
cabal-version:       >=1.10

executable labdecl
  main-is:             Main.hs
  other-extensions:    RecordWildCards, TemplateHaskell, TypeFamilies, DeriveDataTypeable, CPP, OverloadedStrings, QuasiQuotes, ViewPatterns, FlexibleContexts, MultiParamTypeClasses, ExistentialQuantification, TupleSections, ScopedTypeVariables, Rank2Types, DeriveGeneric, GeneralizedNewtypeDeriving, FunctionalDependencies
  ghc-options:         -threaded -Wall -fno-warn-orphans -fno-warn-unused-do-bind -fno-warn-name-shadowing -O -rtsopts
  build-depends:       base >=4.7,
                       mtl >=2.1,
                       errors >=2.0,
                       bytestring >=0.10,
                       attoparsec >=0.10,
                       byteable >=0.1,
                       cryptohash >=0.11,
                       cipher-aes >=0.2,
                       pbkdf >=1.1,
                       entropy >=0.3,
                       acid-state >=0.12,
                       template-haskell >=2.9,
                       lens >=4.1,
                       stm >=2.4,
                       async >=2.0,
                       base64-bytestring >=1.0,
                       text >=1.1,
                       containers >=0.5,
                       aeson >=0.7,
                       time >=1.4,
                       http-types >=0.8,
                       http-client >=0.4,
                       shakespeare >=2.0,
                       tar >=0.4,
                       unix >=2.7,
                       temporary >=1.2,
                       process >=1.2,
                       data-default >=0.5,
                       vector >=0.10,
                       conduit >=1.2,
                       conduit-extra >=1.1,
                       wai >=3.0,
                       wai-extra >=3.0,
                       wai-logger >=2.2,
                       wai-conduit >=3.0,
                       yesod-core >=1.4,
                       yesod-form >=1.4,
                       yesod-websockets >=0.2,
                       yesod-static >=1.4,
                       yesod-auth >=1.4,
                       warp >=3.0,
                       http-client-tls >=0.2,
                       JuicyPixels >=3.1,
                       ixset >=1.0,
                       csv-conduit >=0.6,
                       safecopy >=0.8,
                       path-pieces >=0.1,
                       text-icu >=0.7,
                       random >=1.1,
                       lifted-async >=0.7,
                       fast-logger >=2.4,
                       pandoc >=1.15,
                       blaze-markup >=0.7
  default-language:    Haskell2010
